--- a/packages/express-typescript/package.json
+++ b/packages/express-typescript/package.json
@@ -16,6 +16,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "~4.16.4",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "1.4.5-lts.1",
     "pg": "^8.11.3"
   },
@@ -23,6 +25,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.9.4",
     "@types/pg": "^8.10.9",
     "nodemon": "^3.0.1",
