--- a/packages/node-GDAL/package.json
+++ b/packages/node-GDAL/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "gdal": "^0.11.1"
+  }
 }
